commit c5a88fcef606eb6afa82ab66e2b34c3f4d4f8de9
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Fri Jul 29 22:19:51 2011 +0900

    aufs: possible bugfix, race between remount and sysrq
    
    Introduce au_sbilist_lock(), au_sbilist_unlock(), and a GFP wrapper
    AuGFP_SBILIST.
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit 6fbc8128aa89bda340cae797f247f0e9936eb4c6
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Wed Jul 27 11:30:42 2011 +0900

    aufs: update donators list
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit 26724b62f7d771f737c939c8f863c3b6659d3de1
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Mon Jul 18 21:08:34 2011 +0900

    aufs: possible bugfix, always force cpup to pass workqueue
    
    Since process credentials and other status can be changed anytime,
    aufs should always pass the cpup work to the internal workqueue which
    has superuser privilege.
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit 2fe06c7c3761ad04f248562523e85a491bf64266
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Mon Jul 25 21:49:06 2011 +0900

    aufs: allow hnotify to call another nowait task
    
    By next commit, copy-up may become done sio task which were not sio,
    and hnotify may be fired to the UDBA-removed direcotry. This situation
    brings "sio-cpup wkq task --> hnotify --> nowait wkq task" which wkq
    calls wkq.
    Use the new AuWkq_NEST flag (which was introduce previous commit) for
    this case.
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit 0f0e68392bac45ca02c7000b8e6b8361fafd25a6
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Mon Jul 25 21:42:12 2011 +0900

    aufs: tiny, support nested wkq
    
    Add a new flag AuWkq_NEST to allow the auwkq task calls another nowait
    task.
    - extract a part of au_dbg_verify_kthread() and create a new function
      au_wkq_test().
    