@@ -1,4 +1,4 @@
-aufs2.1 base patch for linux-2.6.39
+aufs2.2 base patch for linux-2.6.39
 
 diff --git a/fs/namei.c b/fs/namei.c
 index e3c4f11..202d358 100644
