@@ -1,4 +1,4 @@
-aufs2.1 kbuild patch for linux-2.6.39
+aufs2.2 kbuild patch for linux-2.6.39
 
 diff --git a/fs/Kconfig b/fs/Kconfig
 index f3aa9b0..d0eaf6e 100644
