@@ -1,4 +1,4 @@
-aufs2.1 standalone patch for linux-2.6.39
+aufs2.2 standalone patch for linux-2.6.39
 
 diff --git a/fs/file_table.c b/fs/file_table.c
 index 01e4c1e..0e800e2 100644
