@@ -1,4 +1,4 @@
-aufs2.1 /proc/PID/maps patch for linux-2.6.39
+aufs2.2 /proc/PID/maps patch for linux-2.6.39
 
 See the commit log 602f6ab in aufs2 GIT tree in detail.
 
